# macos-security-logger

./: .gitignore  Cargo.toml  README.md
config/: default.json
docs/: code-runner.md  index.md  logs-type-macos.md  patterns.md
logs/: raw_output_20241213_194616.json
src/: config.rs  error.rs  lib.rs  main.rs  utils.rs
src/logger/: mod.rs  models.rs  report.rs
tests/: integration_tests.rs
