[package]
name = "macos-security-logger"
version = "0.1.0"
edition = "2021"
authors = ["Anubhav Gain <iamanubhavgain@gmail.com>"]
description = "A production-ready security log collector for macOS"
license = "MIT"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
secrecy = "0.8"
directories = "5.0"
tokio-stream = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zeroize = { version = "1.6", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
assert_fs = "1.0"
predicates = "3.0"